@@ -3,7 +3,12 @@ package com.szymonbalcerowski.testermatching.service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
+
+import com.szymonbalcerowski.testermatching.dto.CountryDTO;
 import com.szymonbalcerowski.testermatching.repository.TesterRepository;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import org.junit.Test;
@@ -23,9 +28,9 @@ public class TesterServiceTest {
 
   @Test
   public void testExample() {
-    when(testerRepository.findAllCountries()).thenReturn(Set.of("DE", "PL"));
+    when(testerRepository.findAllCountries()).thenReturn(new HashSet<>(Arrays.asList("DE", "PL")));
 
-    var result = testerService.getAllCountries();
+    List<CountryDTO> result = testerService.getAllCountries();
 
     assertEquals(2, result.size());
   }
